--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -29,41 +29,64 @@
                 	<div class="panel panel-info" style="margin: 0;">
 						<div class="panel-heading">
 							<form class="form-inline" ng-submit="search()">
-							  <div class="form-group input-group">
-							  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
-							  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.id as option.showname for option in usersSearch">
-									<option value="">--ทั้งหมด--</option>
-						  		</select>
-							  </div>
 							
-							  <div class="form-group input-group">
-							   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
-							    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword" style="width: 150px;">
-							  </div>
-							  
-							  <div class="form-group" style="margin-left: 20px;">
-				                <label>{{ headers[0].columnNameAlias || headers[0].columnName }}&nbsp;</label>
-				                <label class="radio-inline">
-				                    <input type="radio" name="isActive" value="true" ng-model="formData.isActive">เปิด
-				                </label>
-				                <label class="radio-inline">
-				                    <input type="radio" name="isActive" value="false" ng-model="formData.isActive">ปิด
-				                </label>
-		   					  </div>
-		   					  
-							   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()" style="margin-left: 20px;">{{'user.search.clear_btn' | translate}}</button>
-							   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
+								<div class="row">
+									<div class="col-lg-12">
+								
+								  <div class="form-group input-group">
+								  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
+								  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.id as option.showname for option in usersSearch">
+										<option value="">--ทั้งหมด--</option>
+							  		</select>
+								  </div>
+								
+								  <div class="form-group input-group">
+								   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
+								    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword" style="width: 150px;">
+								  </div>
+							
+								  <div class="form-group" style="margin-left: 20px;">
+					                <label>{{ headers[0].columnNameAlias || headers[0].columnName }}&nbsp;</label>
+					                <label class="radio-inline">
+					                    <input type="radio" name="isActive" value="true" ng-model="formData.isActive">เปิด
+					                </label>
+					                <label class="radio-inline">
+					                    <input type="radio" name="isActive" value="false" ng-model="formData.isActive">ปิด
+					                </label>
+			   					  </div>
+			   					   
+								   <div class="pull-right">
+								   	     <!-- งานว่างมี {{ noOwnerCount | number:0 }} เคส&nbsp;&nbsp; -->
+								   	        จ่ายงานใหม่ (Excel Upload)
+									   <input type="file" class="form-control"
+											  style="width: 200px;" nv-file-select="" uploader="uploader"
+											  accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" /> |
+											  
+									  <button type="button" ng-click="showCollector2()" class="btn btn-outline btn-primary">จ่ายงาน/โอนงาน</button>
+								   </div>
 							   
-							   <div class="pull-right">
-							   	     <!-- งานว่างมี {{ noOwnerCount | number:0 }} เคส&nbsp;&nbsp; -->
-							   	        จ่ายงานใหม่ (Excel Upload)
-								   <input type="file" class="form-control"
-										  style="width: 200px;" nv-file-select="" uploader="uploader"
-										  accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" /> |
-										  
-								  <button type="button" ng-click="showCollector2()" class="btn btn-outline btn-primary">จ่ายงาน/โอนงาน</button>
+							   	</div>
 							   </div>
 							   
+							   <div class="row" style="margin-top: 5px;">
+								   <div class="col-lg-12">	  
+									  <div class="input-group" ng-class="{'has-error':searchForm.dateFrom.$invalid || searchForm.dateTo.$invalid}">
+										  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+										  	<select name="dateColumnName" class="form-control" ng-model="formData.dateColumnName" 
+										  	        ng-options="option.columnName as (option.columnNameAlias || option.columnName) for option in dateColumnNames" style="width: 180px;" ng-change="dateColumnNameChanged()">
+												<option value="">--เลือกคอลัมน์วันที่--</option>
+									  		</select>
+										    <input type="text" name="date" class="form-control dateSearch" 
+										    	   ng-disabled="!formData.dateColumnName" ng-required="formData.dateColumnName"
+										    	   readonly="readonly" date-parser="dd/MM/yyyy" style="width: 120px;" ng-model="formData.date">
+								    	    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+									  </div>
+									  
+									  <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()" style="margin-left: 20px;">{{'user.search.clear_btn' | translate}}</button>
+								   	  <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
+								   
+									</div>		  
+							   </div>
 							   
 							</form>
 						</div>
