--- a/backend/src/main/webapp/app/views/taskdetail/contextMenu1.html
+++ b/backend/src/main/webapp/app/views/taskdetail/contextMenu1.html
@@ -1,6 +1,7 @@
 <div class="list-group">
   <a class="list-group-item" href="" ng-click="contextMenuSelected(1)"><i class="fa fa-external-link-square fa-fw" style="color: black;"></i>&nbsp; จ่ายงาน/โอนงาน</a>
   <a class="list-group-item" href="" ng-click="contextMenuSelected(2)"><i class="fa fa-random fa-fw"></i>&nbsp; เปิด/ปิด การใช้งาน</a>
-  <a class="list-group-item" href="" ng-click="contextMenuSelected(3)"><i class="fa fa-tasks fa-fw"></i>&nbsp; Add to export list</a>
-  <a class="list-group-item" href="" ng-click="contextMenuSelected(4)"><i class="fa fa-download fa-fw"></i>&nbsp; Export</a>
+  <a class="list-group-item" href="" ng-click="contextMenuSelected(3)"><i class="fa fa-trash-o fa-fw"></i>&nbsp; Remove</a>
+  <a class="list-group-item" href="" ng-click="contextMenuSelected(4)"><i class="fa fa-tasks fa-fw"></i>&nbsp; Add to list</a>
+  <a class="list-group-item" href="" ng-click="contextMenuSelected(5)"><i class="fa fa-download fa-fw"></i>&nbsp; Export</a>
 </div>
