--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -60,7 +60,7 @@
 								   	        จ่ายงานใหม่ (Excel Upload)
 									   <input type="file" class="form-control"
 											  style="width: 200px;" nv-file-select="" uploader="uploader"
-											  accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" /> |
+											  accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
 											  
 									  <button type="button" ng-click="showCollector2()" class="btn btn-outline btn-primary">จ่ายงาน/โอนงาน</button>
 								   </div>
@@ -85,7 +85,13 @@
 								   	  <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 								   	  
 								   	  <div class="pull-right">
-								   	  		<button class="btn btn-primary" type="button" ng-click="showExportList()">2Export list <span class="badge" style="background-color: white; color: #337AB7;">124</span></button>
+								   	  		<div class="btn-group">
+												<button type="button" class="btn btn-primary">Enable</button>
+											  	<button type="button" class="btn btn-primary">Disable</button>
+											  	<button type="button" class="btn btn-primary">Remove</button>
+											  	<button type="button" class="btn btn-primary">Export</button>
+											</div>
+								   	  		<button class="btn btn-outline btn-primary" type="button" ng-disabled="selectedItems.length == 0" ng-click="showSelectedList()">Selected List <span class="badge" style="background-color: #EC971F; color: white;">{{ selectedItems.length }}</span></button>
 								   	  </div>
 								   	  
 									</div>		  
@@ -316,16 +322,40 @@
          <div class="modal-content">
          	<div class="modal-header">
          		<button type="button" class="close" ng-click="dismissModal3()" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Export List</h4>
+                <h4 class="modal-title" id="myModalLabel" style="color: #337AB7;">Selected List</h4>
             </div>
             <div class="modal-body" style="padding-top: 3px;">
             
-            	8888
+            		<div class="table-responsive" style="padding: 0; overflow: auto; max-height: 500px;">
+						<table class="table table-striped table-hover table-bordered" style="margin: 0;">
+							<thead>
+								<tr style="color: #337AB7;">
+									<th style="white-space: nowrap; text-align: center;">ลำดับที่</th>
+									<th ng-repeat="h in headersSelectedItem" style="white-space: nowrap; text-align: center;">
+										{{ h.columnNameAlias || h.columnName }}
+									</th>
+									<th></th>
+								</tr>
+							<thead>
+							<tbody>
+								<tr ng-repeat="data in selectedItems track by $index" style="color: #337AB7;">
+									<td style="vertical-align: middle; text-align: center;">{{ $index + 1 }}</td>
+									<td ng-repeat="h in headersSelectedItem" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
+										{{ data[h.columnName] }}
+									</td>
+									<th style="text-align: center;">
+										<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteSelectedList(data.id)"></i>
+									</th>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					
             	
             </div>
            	<div class="modal-footer">
 				<button type="button" class="btn btn-default" ng-click="dismissModal3()">ปิด</button>
-                <button type="button" class="btn btn-primary">ตกลง</button>
+                <button type="button" class="btn btn-primary" ng-click="clearSelectedList()" ng-disabled="selectedItems.length == 0">Clear List</button>
 			</div>
          </div>
      </div>
