--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -28,7 +28,7 @@
                 
                 	<div class="panel panel-info" style="margin: 0;">
 						<div class="panel-heading">
-							<form class="form-inline" ng-submit="search()">
+							<form class="form-inline" ng-submit="search()" name="searchForm" novalidate>
 							
 								<div class="row">
 									<div class="col-lg-12">
@@ -70,7 +70,7 @@
 							   
 							   <div class="row" style="margin-top: 5px;">
 								   <div class="col-lg-12">	  
-									  <div class="input-group" ng-class="{'has-error':searchForm.dateFrom.$invalid || searchForm.dateTo.$invalid}">
+									  <!-- <div class="input-group" ng-class="{'has-error':searchForm.dateFrom.$invalid || searchForm.dateTo.$invalid}">
 										  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 										  	<select name="dateColumnName" class="form-control" ng-model="formData.dateColumnName" 
 										  	        ng-options="option.columnName as (option.columnNameAlias || option.columnName) for option in dateColumnNames" style="width: 180px;" ng-change="dateColumnNameChanged()">
@@ -79,10 +79,37 @@
 										    <input type="text" name="date" class="form-control dateSearch" 
 										    	   ng-disabled="!formData.dateColumnName" ng-required="formData.dateColumnName"
 										    	   readonly="readonly" date-parser="dd/MM/yyyy" style="width: 120px;" ng-model="formData.date">
+									  </div> -->
+									  
+									  
+									  <div class="input-group input-daterange">
+									  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+									  	<select name="dateColumnName" class="form-control" ng-model="formData.dateColumnName" 
+									  	        ng-options="option.columnName as (option.columnNameAlias || option.columnName) for option in dateColumnNames" 
+									  	        style="width: 180px;" ng-change="dateColumnNameChanged()">
+											<option value="">--เลือกวันที่--</option>
+								  		</select>
+									    <input type="text" name="dateFrom" class="form-control" 
+									    	   ng-disabled="!formData.dateColumnName" readonly="readonly" date-parser="dd/MM/yyyy" 
+									    	   style="width: 120px;" ng-model="formData.dateFrom">
+									    <span class="input-group-addon">ถึง</span>
+									    <input type="text" name="dateTo" class="form-control" 
+									    	   ng-disabled="!formData.dateColumnName" readonly="readonly" date-parser="dd/MM/yyyy" 
+									    	   style="width: 120px;" ng-model="formData.dateTo">
 									  </div>
+									  
+									  
 									  
 									  <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()" style="margin-left: 20px;">{{'user.search.clear_btn' | translate}}</button>
 								   	  <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
+								   	  
+								   	  
+								   	  
+								   	  
+								   	  
+								   	  
+								   	  
+								   	  
 								   	  
 								   	  <div class="pull-right">
 								   	  		<div class="btn-group">
