--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -98,25 +98,15 @@
 									    	   style="width: 120px;" ng-model="formData.dateTo">
 									  </div>
 									  
-									  
-									  
 									  <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()" style="margin-left: 20px;">{{'user.search.clear_btn' | translate}}</button>
 								   	  <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 								   	  
-								   	  
-								   	  
-								   	  
-								   	  
-								   	  
-								   	  
-								   	  
-								   	  
 								   	  <div class="pull-right">
 								   	  		<div class="btn-group">
-												<button type="button" class="btn btn-primary">Enable</button>
-											  	<button type="button" class="btn btn-primary">Disable</button>
-											  	<button type="button" class="btn btn-primary">Remove</button>
-											  	<button type="button" class="btn btn-primary">Export</button>
+												<button type="button" class="btn btn-primary" ng-click="search('enable')">Enable</button>
+											  	<button type="button" class="btn btn-primary" ng-click="search('disable')">Disable</button>
+											  	<button type="button" class="btn btn-primary" ng-click="search('remove')">Remove</button>
+											  	<button type="button" class="btn btn-primary" ng-click="search('export')">Export</button>
 											</div>
 								   	  		<button class="btn btn-outline btn-primary" type="button" ng-disabled="selectedItems.length == 0" ng-click="showSelectedList()">Selected List <span class="badge" style="background-color: #EC971F; color: white;">{{ selectedItems.length }}</span></button>
 								   	  </div>
@@ -381,8 +371,17 @@
             	
             </div>
            	<div class="modal-footer">
-				<button type="button" class="btn btn-default" ng-click="dismissModal3()">ปิด</button>
-                <button type="button" class="btn btn-primary" ng-click="clearSelectedList()" ng-disabled="selectedItems.length == 0">Clear List</button>
+           		<div class="btn-group">
+					<button type="button" class="btn btn-default" ng-click="dismissModal3()">ปิด</button>
+	                <button type="button" class="btn btn-default" ng-click="clearSelectedList()" ng-disabled="selectedItems.length == 0">Clear List</button>
+                </div>
+                <div class="btn-group">
+					<button type="button" class="btn btn-primary" ng-click="selectedListAcion('enable')">Enable</button>
+				  	<button type="button" class="btn btn-primary" ng-click="selectedListAcion('disable')">Disable</button>
+				  	<button type="button" class="btn btn-primary" ng-click="selectedListAcion('remove')">Remove</button>
+				  	<button type="button" class="btn btn-primary" ng-click="selectedListAcion('export')">Export</button>
+				</div>
+                
 			</div>
          </div>
      </div>
