--- a/backend/src/main/webapp/app/views/assigntask/main.html
+++ b/backend/src/main/webapp/app/views/assigntask/main.html
@@ -44,10 +44,10 @@
 							<thead>
 								<tr style="color: #337AB7;">
 									<th width="10%">ลำดับที่</th>
-									<th width="50%">ชื่อไฟล์</th>
+									<th width="45%">ชื่อไฟล์</th>
 									<th width="10%">จำนวนเคส</th>
 									<th width="20%">วันที่นำเข้า</th>
-									<th width="10%">
+									<th width="15%">
 										<i class="fa fa-tasks fa-lg user-action-icon-primary" ng-click="viewDetail()" title="แสดงข้อมูลทั้งหมด"></i>
 									</th>									
 								</tr>
@@ -61,6 +61,8 @@
 									<td>
 										<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)"></i>&emsp;
 										<i class="fa fa-lg" ng-class="{'fa-check-circle': data.enabled, 'fa-minus-circle': !data.enabled, 'user-action-icon-primary': data.enabled, 'user-action-icon-danger': !data.enabled}" ng-click="updateEnabled(data)"></i>&emsp;
+										<i class="fa fa-download fa-lg user-action-icon-primary" ng-click="download(data.id)" title="Download file ต้นฉบับ" ng-show="group0">&emsp;</i>
+										<i class="fa fa-download fa-lg user-action-icon-primary" ng-click="download(data.id, true)" title="Download file เพื่อตรวจสอบ"></i>&emsp;
 										<i class="fa fa-bars fa-lg user-action-icon-primary" ng-click="viewDetail(data.id)" title="แสดงข้อมูล"></i>
 									</td>
 								</tr>
