--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -20,13 +20,13 @@
 							 <a href="#" ng-hide="f.dataType != 'date'" e-class="form-control" buttons="no" onaftersave="updateData(f.columnName, detail[f.columnName], f.dataType)" style="color: #E1E2E3;"
 							    e-date-parser="dd/MM/yyyy" editable-text="detail[f.columnName]">
 								{{ 
-								   detail[f.columnName] | date:gb_dateFormat
+								   (detail[f.columnName] | date:gb_dateFormat) || '-'
 								}}
 							 </a>
 							 <a href="#" ng-hide="f.dataType == 'date'" e-class="form-control" buttons="no" onaftersave="updateData(f.columnName, detail[f.columnName], f.dataType)" style="color: #E1E2E3;"
 							    editable-text="detail[f.columnName]">
 								{{ 
-								   f.dataType == 'num' ? (detail[f.columnName] | number:2) : detail[f.columnName] 
+								   (f.dataType == 'num' ? (detail[f.columnName] | number:2) : detail[f.columnName]) || '-'
 								}}
 							 </a>
 					 	</span>
