--- a/backend/src/main/webapp/app/views/newtask/main.html
+++ b/backend/src/main/webapp/app/views/newtask/main.html
@@ -21,7 +21,7 @@
 	<div class="panel-body" style="padding: 3px;">
           	
           	<div class="panel panel-info" style="margin: 0;">
-				<div class="panel-heading">
+				<div class="panel-heading" nv-file-drop="" uploader="uploader">
 
               	<!-- <h3>Upload queue</h3>
                <p>Queue length: {{ uploader.queue.length }}</p> -->
