--- a/backend/src/main/webapp/app/styles/common.css
+++ b/backend/src/main/webapp/app/styles/common.css
@@ -128,3 +128,10 @@
     display: none;
 }
 /* ----------: Override Flipclock :---------- */
+
+
+/* ----------: File Upload :---------- */
+.my-drop-zone { border: dotted 3px lightgray; }
+.nv-file-over { border: dotted 3px red; } /* Default class applied to drop zones on over */
+.another-file-over-class { border: dotted 3px green; }
+/* ----------: File Upload :---------- */
