--- a/backend/src/main/webapp/app/views/payment/search.html
+++ b/backend/src/main/webapp/app/views/payment/search.html
@@ -1,5 +1,5 @@
 <div class="panel panel-info" style="margin: 0;">
-	<div class="panel-heading">
+	<div class="panel-heading" nv-file-drop="" uploader="uploader">
 
 
 		<!-- <h3>Upload queue</h3>
