--- a/backend/src/main/webapp/app/views/trace_result_report/main.html
+++ b/backend/src/main/webapp/app/views/trace_result_report/main.html
@@ -20,7 +20,7 @@
 	<div class="panel-body" style="padding: 3px;">
 
 			<div class="panel panel-info" style="margin: 0;">
-				<div class="panel-heading">
+				<div class="panel-heading" nv-file-drop="" uploader="uploader">
 		
 
 				<!-- <h3>Upload queue</h3>
