--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -106,7 +106,7 @@
 												<button type="button" class="btn btn-primary" ng-click="search('enable')">Enable</button>
 											  	<button type="button" class="btn btn-primary" ng-click="search('disable')">Disable</button>
 											  	<button type="button" class="btn btn-primary" ng-click="search('remove')">Remove</button>
-											  	<button type="button" class="btn btn-primary" ng-click="search('export')">Export</button>
+											  	<button type="button" class="btn btn-primary" ng-click="exportByCriteria()">Export</button>
 											</div>
 								   	  		<button class="btn btn-outline btn-primary" type="button" ng-disabled="selectedItems.length == 0" ng-click="showSelectedList()">Selected List <span class="badge" style="background-color: #EC971F; color: white;">{{ selectedItems.length }}</span></button>
 								   	  </div>
