--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -59,9 +59,9 @@
 									    	   style="width: 120px;" ng-model="formData.dateTo">
 									  </div>
 									  
-									  <div class="form-group pull-right">
+									  <!-- <div class="form-group pull-right">
 										<label>ยอดนัดชำระรวม: {{ appointAmountTotal | number:2 }} บาท</label><br />
-									  </div>
+									  </div> -->
 								   
 									</div>
 								</div>
