--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -175,6 +175,10 @@
 										เบอร์โทรใหม่
 									</th>
 									
+									<th style="white-space: nowrap; text-align: center; color: #337AB7;">
+										ที่อยู่ใหม่
+									</th>
+									
 									<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
 										<a href="" ng-click="columnOrder(h.columnName, 'taskDetail')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 											{{ h.columnNameAlias || h.columnName }}&nbsp;
@@ -204,6 +208,8 @@
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['link_resultCode'][0].rstCode }}</td>
 									
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['tel'] }}</td>
+									
+									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['address'] }}</td>
 									
 									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 										{{ 
