--- a/backend/src/main/webapp/app/views/trace_result_report/main.html
+++ b/backend/src/main/webapp/app/views/trace_result_report/main.html
@@ -93,7 +93,7 @@
 						<div class="col-lg-6">
 							<input type="file" class="form-control pull-left"
 								style="width: 300px;" nv-file-select="" uploader="uploader"
-								accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
+								accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
 						</div>
 					</div>
 				</div>
