--- a/backend/src/main/webapp/app/views/working/tab_addr.html
+++ b/backend/src/main/webapp/app/views/working/tab_addr.html
@@ -57,8 +57,8 @@
 			          <i class="fa fa-floppy-o fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" onclick="$(this.parentElement).submit()" title="บันทึก"></i>
 			        </form>
 			        <div class="buttons" ng-show="!rowform.$visible">
-			          <i class="fa fa-times fa-lg user-action-icon-danger" ng-click="addrObj.removeItem($index, item.id)" title="ลบ"></i>&nbsp;
-			          <i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข"></i>&nbsp;
+			          <i class="fa fa-times fa-lg user-action-icon-danger" ng-click="addrObj.removeItem($index, item.id)" title="ลบ" ng-show="isEditable"></i>&nbsp;
+			          <i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข" ng-show="isEditable"></i>&nbsp;
 			          <i class="fa fa-print fa-lg user-action-icon-primary" title="Print Notice" ng-click="noticeMenu(item.addr1 + '\n' + item.addr2 + '\n' + item.addr3 + '\n' + item.addr4)"></i>
 			        </div>  
 		      	</td>
