--- a/backend/src/main/webapp/app/views/working/tab_addr.html
+++ b/backend/src/main/webapp/app/views/working/tab_addr.html
@@ -11,7 +11,7 @@
 	<table class="table table-striped table-hover" style="margin: 0;">
 		<thead>
 			<tr style="color: #337AB7;">
-				<th>ประเภทที่อยู่</th>
+				<th style="width: 10%;">ประเภทที่อยู่</th>
 				<th>ที่อยู่ส่วนที่ 1</th>
 				<th>ที่อยู่ส่วนที่ 2</th>
 				<th>ที่อยู่ส่วนที่ 3</th>
