--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -1,3 +1,24 @@
+<style>
+legend {
+    border: 1px solid #BDC3C7;
+    border-radius: 15px 15px 15px 15px;
+    padding-left: 15px;
+    width: 400px;
+    margin-left: 3px;
+}
+fieldset {
+	border: 1px solid #BDC3C7;
+	border-radius: 0 0 15px 15px;
+}
+
+.editable-wrap {
+    width: 100%;
+}
+.editable-controls {
+	width: 100%;
+}
+</style>
+
 <div>
 	<div class="row">
 		<div class="col-lg-12">
@@ -27,6 +48,43 @@
 								<input type="file" class="form-control" nv-file-select="" uploader="uploaderThailandDb" accept=".dat" />
 							</div>
 						</div>
+				
+						
+						
+						<fieldset style="margin-top: 15px;" ng-show="group0"> <legend style="color: #337AB7;">Database backup configuration</legend>
+							<div class="form-group">
+								<label class="control-label col-lg-2" style="color: #337AB7;">Mongodump program path: </label>
+								<div class="col-lg-5">
+									<a href="" e-class="form-control" e-style="width: 100%;" buttons="no" onaftersave="update()" editable-text="mongdumpPath">{{ mongdumpPath || 'edit' }}</a>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="control-label col-lg-2" style="color: #337AB7;">Backup folder path: </label>
+								<div class="col-lg-5">
+									<a href="" e-class="form-control" e-style="width: 100%;" buttons="no" onaftersave="update()" editable-text="backupPath">{{ backupPath || 'edit' }}</a>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="control-label col-lg-2" style="color: #337AB7;">Backup time: </label>
+								<div class="col-lg-5">
+									<a href="" e-class="form-control" e-style="width: 100%;" buttons="no" onaftersave="update()" editable-text="backupTime">{{ backupTime || 'edit' }}</a>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="control-label col-lg-2" style="color: #337AB7;">Username: </label>
+								<div class="col-lg-5">
+									<a href="" e-class="form-control" buttons="no" onaftersave="update()" editable-text="backupUsername">{{ backupUsername || 'edit' }}</a>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="control-label col-lg-2" style="color: #337AB7;">Password: </label>
+								<div class="col-lg-5">
+									<a href="" e-class="form-control" buttons="no" onaftersave="update()" editable-text="backupPassword">{{ backupPassword || 'edit' }}</a>
+								</div>
+							</div>
+						</fieldset>
+						
+						
 						
                 	</div>
                 </div>
