--- a/backend/src/main/webapp/app/views/action_code/main.html
+++ b/backend/src/main/webapp/app/views/action_code/main.html
@@ -30,11 +30,12 @@
 					<table class="table table-striped table-hover">
 						<thead>
 							<tr style="color: #337AB7;">
-								<th style="width: 15%;">ตัวย่อ</th>
+								<th style="width: 10%;">ตัวย่อ</th>
 								<th style="width: 30%;">ประโยคเต็ม</th>
 								<th style="width: 30%;">ความหมาย</th>
+								<th style="width: 10%;">Notice</th>
 								<th style="width: 10%;">สถานะ</th>
-								<th style="width: 15%;"></th>
+								<th style="width: 10%;"></th>
 							</tr>
 						<thead>
 						<tbody>
@@ -42,6 +43,11 @@
 								<td style="vertical-align: middle;"><span editable-text="item.actCode" e-name="code" e-form="rowform">{{ item.actCode }}</span></td>
 								<td style="vertical-align: middle;"><span editable-text="item.actDesc" e-name="desc" e-form="rowform">{{ item.actDesc }}</span></td>
 								<td style="vertical-align: middle;"><span editable-text="item.actMeaning" e-name="meaning" e-form="rowform">{{ item.actMeaning }}</span></td>
+								<td style="vertical-align: middle;">
+									<span e-form="rowform" e-name="isPrintNotice" editable-checkbox="item.isPrintNotice" e-title="ปริ้น Notice">
+									    <!-- <i class="fa fa-print fa-lg user-status-enabled-icon" ng-show="item.isPrintNotice"></i> --> 
+									</span>
+								</td>
 								<td style="vertical-align: middle;"><span editable-radiolist="item.enabled" e-name="enabled" e-form="rowform" e-ng-options="s.value as s.text for s in statuses"> 
 									<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="item.enabled"></i> 
 									<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="item.enabled"></i>
@@ -60,7 +66,7 @@
 						</tbody>
 					</table>
 				</div>
-
+				
 				<div class="pull-right">
 					<button type="button" class="btn btn-primary btn-circle btn-sm" ng-click="addItem()">
 						<i class="fa fa-plus-square"></i>
